--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
+  "type": "commonjs",
+  "description": "Servidor Aparatu / Doodads - MongoDB + Mongoose",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node -r dotenv/config index.ts",
+    "seed": "ts-node --compiler-options '{\"module\":\"commonjs\"}' -r dotenv/config ./seed/populateDataBaseSeed.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
