fix(routes): ensure correct middleware import resolution via tsconfig and unified execution

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,39 +1,17 @@
 {
   "compilerOptions": {
-    /* Diretórios */
+    "target": "ES2020",
+    "module": "CommonJS",
     "rootDir": "./",
     "outDir": "./dist",
-
-    /* Módulo e target */
-    "module": "commonjs",
-    "target": "ES2020",
-
-    /* Resolução e compatibilidade */
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-
-    /* Tipagem e checagem */
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node"],              // 👈 essencial para corrigir o erro do 'process'
-
-    /* Suporte a paths (opcional) */
-    "baseUrl": ".",
-    "paths": {
-      "@models/*": ["models/*"],
-      "@config/*": ["config/*"],
-      "@utils/*": ["utils/*"]
-    }
+    "resolveJsonModule": true
   },
-  "include": [
-    "**/*.ts",
-    "seed/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
+
