--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "axios": "^1.7.0",
     "lucide-react": "^0.553.0",
     "next": "15.0.0",
     "react": "18.3.0",
-    "react-dom": "18.3.0"
+    "react-dom": "18.3.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
-    "@types/react": "^19.2.2",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.3"
   }
 }
