--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "next": "15.0.0",
     "react": "18.3.0",
     "react-dom": "18.3.0",
+    "react-hot-toast": "^2.6.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
