--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "exactOptionalPropertyTypes": false
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
