--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "stripe": "^19.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
@@ -30,6 +31,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
+    "@types/stripe": "^8.0.416",
     "@types/supertest": "^6.0.3",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
