--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-hot-toast": "^2.6.0",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
