--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "next": "15.0.0",
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "react-hot-toast": "^2.6.0",
     "swr": "^2.3.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
