--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/pagamento/webhook"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@types/stripe": "^8.0.416",
     "@types/supertest": "^6.0.3",
